fea-rs/test-data/compile-tests/mini-latin/bad/multiple_sub_bad_class_len.fea
@class3 = [a b c];
@class2 = [a b];

# if replacement is class, it must have same length as target
feature okay {
    sub @class3 by @class2 z;
} okay;
